<resources>
    <string name="app_name">Book Flight</string>
    <string name="roundtrip">Roundtrip</string>
    <string name="one_way">One way</string>
    <string name="history">History</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="depart">Depart</string>
    <string name="return_">Return</string>
    <string name="passengers">Passengers</string>
    <string name="max_stops">Maximum number of stops</string>
    <string name="nonstop">Nonstop</string>
    <string name="one_stop">One stop</string>
    <string name="two_or_more">2 or more</string>
    <string name="search_flights">Search flights</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signin">Sign in</string>
    <string name="err_password">Incorrect password</string>
    <string name="err_user">User not found</string>
    <string name="err_db">Database error</string>
    <string name="create_account">Create account</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="bookings">Bookings</string>
    <string name="add_reminder">Add reminder</string>
    <string name="see_airport_depart_maps">See depart airport in Maps</string>
    <string name="see_airport_landing_maps">Se landing airport in Maps</string>
    <string name="book_confirmation">Are you sure you want to book this flight?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_more_than_19">Can\'t be higher than 19</string>
    <string name="no_less_than_1">Can\'t be lower than 1</string>
    <string name="booking_num">Booking nº</string>
    <string name="total">Total</string>
    <string name="calendar_title">Flight to</string>
    <string name="passenger_num">Number of passengers</string>
    <string name="empty_fields_warning">There are empty fields</string>
    <string name="upgrade_first_class">Upgrade to first class</string>
    <string name="cancel_flight">Cancel flight</string>
    <string name="already_first_class">This booking is already first class</string>
    <string name="search_results">Search results</string>
    <string name="user_exists">There is an existing user with that username</string>
    <string name="nothing_found">Nothing found</string>
    <string name="delete_history">Delete history</string>
    <string name="booking_success">Flight booked</string>
</resources>